# ProfessorFitMCP

./: .env.example  .gitignore  README.md  pyproject.toml
data/institutions/: au_go8.json  ca_u15.json  cn_985_211.json  de_tu9.json  hk_top5.json  jp_imperial.json  kr_sky.json  uk_russell.json  us_r1.json
docs/superpowers/plans/: 2026-06-09-professor-fit-mcp.md
docs/superpowers/specs/: 2026-06-09-professor-fit-mcp-redesign-design.md
src/professor_fit_mcp/: server.py
src/professor_fit_mcp/exporters/: csv_export.py  json_export.py  markdown.py
src/professor_fit_mcp/models/: common.py  paper.py  professor.py
src/professor_fit_mcp/services/: dblp.py  homepage.py  institution.py  llm.py  openalex.py
src/professor_fit_mcp/tools/: details.py  export.py  find.py  profiles.py  ranking.py  search.py
src/professor_fit_mcp/utils/: cache.py  profile_merger.py  profile_store.py  text_processing.py
tests/: live_test.py  test_cache.py  test_dblp.py  test_homepage.py  test_institution.py  test_models.py  test_openalex.py  test_profile_store.py  test_text_processing.py  test_tools_details.py  test_tools_export.py  test_tools_find.py  test_tools_ranking.py  test_tools_search.py
