[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "professor-fit-mcp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pydantic>=2.0.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
]
scholar = ["scholarly>=1.7.0"]

[project.scripts]
professor-fit-mcp = "professor_fit_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/professor_fit_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.metadata]
allow-direct-references = true
